<?xml version="1.0"?>
<package format="3">
  <name>hybrid_a_star_planner</name>
  <version>0.0.1</version>
  <description>ROS2 Hybrid A* path planner package</description>
  <maintainer email="ethan@example.com">Ethan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ompl</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
